--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,37 @@
 name: Build Android APK
 on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4 # Updated to v4
+
+      - name: Set up JDK 17 # Updated to JDK 17 for better Android support
+        uses: actions/setup-java@v4 # Updated to v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
+
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4 # Updated to v4
         with:
-          node-version: '16'
+          node-version: '20' # Using Node 20 (Latest LTS)
+
       - name: Install Cordova
         run: npm install -g cordova
+
       - name: Install Dependencies
         run: npm install
+
       - name: Add Android Platform
-        run: cordova platform add android
+        run: cordova platform add android --no-telemetry
+
       - name: Build APK
-        run: cordova build android --debug
+        run: cordova build android --debug --no-telemetry
+
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4 # Fixed: Updated from v3 to v4
         with:
-          name: app-debug
+          name: AutoPay-Debug-APK
           path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
