--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "cordova-android": "^12.0.0",
     "cordova-plugin-sms-receiver": "^1.1.1",
-    "cordova-plugin-background-mode": "git+https://github.com/katzer/cordova-plugin-background-mode.git",
+    "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-ignore-battery-optimizations": "^1.0.0"
   },
