--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,35 @@
 name: Build Android APK
 on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v4 # v2 থেকে v4 এ আপডেট করা হয়েছে
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4 # v2 থেকে v4 এ আপডেট করা হয়েছে
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
       - name: Install Cordova
         run: npm install -g cordova
+
       - name: Add Android Platform
-        run: cordova platform add android
+        run: cordova platform add android@12.0.0
+
       - name: Build APK
         run: cordova build android --debug
+
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4 # v2 থেকে v4 এ আপডেট করা হয়েছে (এরর সমাধান)
         with:
-          name: app-debug
+          name: AutoPay-Debug-APK
           path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
