--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4 # v2 থেকে v4 এ আপডেট করা হয়েছে
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v4 # v2 থেকে v4 এ আপডেট করা হয়েছে
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -17,10 +17,13 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
 
       - name: Install Cordova
         run: npm install -g cordova
+
+      - name: Install Dependencies
+        run: npm install
 
       - name: Add Android Platform
         run: cordova platform add android@12.0.0
@@ -29,7 +32,7 @@ jobs:
         run: cordova build android --debug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v4 # v2 থেকে v4 এ আপডেট করা হয়েছে (এরর সমাধান)
+        uses: actions/upload-artifact@v4
         with:
           name: AutoPay-Debug-APK
           path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
