--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,15 @@ jobs:
       - name: Install Cordova
         run: npm install -g cordova
 
-      - name: Install Dependencies
-        run: npm install
-
       - name: Add Android Platform
         run: cordova platform add android@12.0.0
+
+      - name: Install Plugins via HTTPS
+        run: |
+          cordova plugin add https://github.com/andres-torres-marquez/cordova-plugin-sms-receive.git
+          cordova plugin add https://github.com/katzer/cordova-plugin-background-mode.git
+          cordova plugin add cordova-plugin-network-information
+          cordova plugin add cordova-plugin-androidx-adapter
 
       - name: Build APK
         run: cordova build android --debug
@@ -34,5 +38,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: AutoPay-Debug-APK
+          name: AutoPay-Final-APK
           path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
