--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,17 +25,21 @@ jobs:
       - name: Add Android Platform
         run: cordova platform add android@12.0.0
 
-      - name: Clone and Add Plugins
+      - name: Download and Add Plugins (No Git Required)
         run: |
-          # প্লাগিনগুলো ম্যানুয়ালি ক্লোন করা হচ্ছে যাতে এরর না আসে
-          git clone --depth 1 https://github.com/andres-torres-marquez/cordova-plugin-sms-receive.git plugins_repo/sms-receive
-          git clone --depth 1 https://github.com/katzer/cordova-plugin-background-mode.git plugins_repo/background-mode
+          # ১. প্লাগিনগুলোর ZIP ফাইল ডাউনলোড করা হচ্ছে
+          curl -L https://github.com/andres-torres-marquez/cordova-plugin-sms-receive/archive/refs/heads/master.zip -o sms.zip
+          curl -L https://github.com/katzer/cordova-plugin-background-mode/archive/refs/heads/master.zip -o bg.zip
           
-          # লোকাল ফোল্ডার থেকে প্লাগিন যুক্ত করা হচ্ছে
-          cordova plugin add ./plugins_repo/sms-receive
-          cordova plugin add ./plugins_repo/background-mode
+          # ২. আনজিপ করা হচ্ছে
+          unzip sms.zip
+          unzip bg.zip
           
-          # সাধারণ প্লাগিনগুলো NPM থেকে যুক্ত করা হচ্ছে
+          # ৩. আনজিপ হওয়া ফোল্ডার থেকে প্লাগিন যুক্ত করা হচ্ছে (ফোল্ডার নামগুলো চেক করে)
+          cordova plugin add ./cordova-plugin-sms-receive-master
+          cordova plugin add ./cordova-plugin-background-mode-master
+          
+          # ৪. অন্যান্য স্ট্যান্ডার্ড প্লাগিন যোগ করা হচ্ছে
           cordova plugin add cordova-plugin-network-information
           cordova plugin add cordova-plugin-androidx-adapter
 
@@ -45,5 +49,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: AutoPay-Final-APK
+          name: AutoPay-Build-APK
           path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
