--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   },
   "devDependencies": {
     "cordova-plugin-androidx-adapter": "^1.1.3"
+  },
+  "cordova": {
+    "platforms": [
+      "android"
+    ]
   }
 }
