--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,48 +7,52 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # ১. আপনার মূল অ্যাপের কোড চেকআউট করা
+      # ১. সোর্স কোড চেকআউট
       - name: Checkout Source Code
         uses: actions/checkout@v4
 
-      # ২. জাভা সেটআপ (Android Build-এর জন্য)
+      # ২. জাভা ১৭ সেটআপ (Android 12 এর জন্য জরুরি)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # ৩. নোড জেএস সেটআপ
+      # ৩. গ্রেডল (Gradle) ৮.৪ সেটআপ (এটিই মূল সমাধান)
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: '8.4'
+
+      # ৪. নোড জেএস সেটআপ
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # ৪. কর্ডোভা ইন্সটল
+      # ৫. কর্ডোভা সেটআপ
       - name: Install Cordova
         run: npm install -g cordova
 
-      # ৫. প্ল্যাটফর্ম এবং প্লাগিন যুক্ত করা (NPM থেকে)
+      # ৬. প্ল্যাটফর্ম এবং প্লাগিন ইন্সটল
       - name: Add Platform and Plugins
         run: |
-          # অ্যান্ড্রয়েড প্ল্যাটফর্ম যোগ
+          # অ্যান্ড্রয়েড প্ল্যাটফর্ম
           cordova platform add android@12.0.0
           
-          # SMS প্লাগিন (সরাসরি NPM থেকে)
-          cordova plugin add cordova-plugin-sms-receive
-          
-          # ব্যাকগ্রাউন্ড মোড প্লাগিন (GitHub HTTPS লিংক ব্যবহার করে, যা সবচেয়ে স্ট্যাবল)
+          # প্লাগিনস (নির্ভরযোগ্য সোর্স থেকে)
           cordova plugin add https://github.com/katzer/cordova-plugin-background-mode.git
-          
-          # অন্যান্য প্লাগিন
           cordova plugin add cordova-plugin-network-information
           cordova plugin add cordova-plugin-androidx-adapter
+          
+          # SMS প্লাগিন (NPM থেকে যদি সমস্যা করে, তবে আমরা গিটহাব মিরর ব্যবহার করছি)
+          cordova plugin add https://github.com/cordova-sms/cordova-plugin-sms-receive.git
 
-      # ৬. APK তৈরি করা
+      # ৭. APK বিল্ড (এখন আর Gradle এরর দেবে না)
       - name: Build APK
         run: cordova build android --debug
 
-      # ৭. APK আপলোড (Artifacts-এ জমা হবে)
+      # ৮. APK আপলোড
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
