--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,15 @@ jobs:
       - name: Checkout Source Code
         uses: actions/checkout@v4
 
-      # ২. জাভা ১৭ সেটআপ (Android 12 এর জন্য জরুরি)
+      # ২. জাভা ১৭ সেটআপ (Android 12 এর জন্য)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # ৩. গ্রেডল (Gradle) ৮.৪ সেটআপ (এটিই মূল সমাধান)
+      # ৩. গ্রেডল (Gradle) ৮.৪ ফিক্স (খুবই গুরুত্বপূর্ণ)
+      # এটি Gradle 9 এর XmlParser এরর সমাধান করবে
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
@@ -30,25 +31,28 @@ jobs:
         with:
           node-version: '20'
 
-      # ৫. কর্ডোভা সেটআপ
+      # ৫. কর্ডোভা ইন্সটল
       - name: Install Cordova
         run: npm install -g cordova
 
-      # ৬. প্ল্যাটফর্ম এবং প্লাগিন ইন্সটল
+      # ৬. প্ল্যাটফর্ম এবং প্লাগিন সেটআপ (NPM থেকে)
       - name: Add Platform and Plugins
         run: |
           # অ্যান্ড্রয়েড প্ল্যাটফর্ম
           cordova platform add android@12.0.0
           
-          # প্লাগিনস (নির্ভরযোগ্য সোর্স থেকে)
+          # SMS প্লাগিন (সরাসরি NPM থেকে, কোনো ভার্সন উল্লেখ ছাড়া)
+          # এটি অটোমেটিক লেটেস্ট (1.0.0) ভার্সন নিয়ে নেবে
+          cordova plugin add cordova-plugin-sms-receive
+          
+          # ব্যাকগ্রাউন্ড মোড (এটি গিটহাব থেকে স্ট্যাবল ভার্সন)
           cordova plugin add https://github.com/katzer/cordova-plugin-background-mode.git
+          
+          # অন্যান্য প্লাগিন
           cordova plugin add cordova-plugin-network-information
           cordova plugin add cordova-plugin-androidx-adapter
-          
-          # SMS প্লাগিন (NPM থেকে যদি সমস্যা করে, তবে আমরা গিটহাব মিরর ব্যবহার করছি)
-          cordova plugin add https://github.com/cordova-sms/cordova-plugin-sms-receive.git
 
-      # ৭. APK বিল্ড (এখন আর Gradle এরর দেবে না)
+      # ৭. APK বিল্ড (Debug)
       - name: Build APK
         run: cordova build android --debug
 
