--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,14 @@ jobs:
       - name: Checkout Source Code
         uses: actions/checkout@v4
 
-      # ২. জাভা ১৭ সেটআপ (Android 12 এর জন্য)
+      # ২. জাভা ১৭ সেটআপ
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # ৩. গ্রেডল (Gradle) ৮.৪ ফিক্স (খুবই গুরুত্বপূর্ণ)
-      # এটি Gradle 9 এর XmlParser এরর সমাধান করবে
+      # ৩. গ্রেডল (Gradle) ৮.৪ সেটআপ
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
@@ -35,28 +34,24 @@ jobs:
       - name: Install Cordova
         run: npm install -g cordova
 
-      # ৬. প্ল্যাটফর্ম এবং প্লাগিন সেটআপ (NPM থেকে)
+      # ৬. প্ল্যাটফর্ম এবং প্লাগিন যোগ
       - name: Add Platform and Plugins
         run: |
-          # অ্যান্ড্রয়েড প্ল্যাটফর্ম
           cordova platform add android@12.0.0
-          
-          # SMS প্লাগিন (সরাসরি NPM থেকে, কোনো ভার্সন উল্লেখ ছাড়া)
-          # এটি অটোমেটিক লেটেস্ট (1.0.0) ভার্সন নিয়ে নেবে
           cordova plugin add cordova-plugin-sms-receive
-          
-          # ব্যাকগ্রাউন্ড মোড (এটি গিটহাব থেকে স্ট্যাবল ভার্সন)
           cordova plugin add https://github.com/katzer/cordova-plugin-background-mode.git
-          
-          # অন্যান্য প্লাগিন
           cordova plugin add cordova-plugin-network-information
           cordova plugin add cordova-plugin-androidx-adapter
 
-      # ৭. APK বিল্ড (Debug)
+      # ৭. অ্যান্ড্রয়েড বিল্ড টুলস ইন্সটল (এটিই মূল সমাধান)
+      - name: Install Android Build Tools
+        run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses && $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "build-tools;33.0.2"
+
+      # ৮. APK তৈরি
       - name: Build APK
         run: cordova build android --debug
 
-      # ৮. APK আপলোড
+      # ৯. APK আপলোড
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
